
	module-level compilation for perlito5.pl (Perl5)

	utf8 support (Java)

	BEGIN blocks (parser)

	tie() and overload

	XS replacement modules

- Parser:
-- fix chomp(), chop()
-- fix fat-arrow in argument lists
-- fix indirect object
-- indented heredoc with <<~"tag"
-- use $^H and %^H
-- set Perl version to 5.026
-- add core modules:
	Tie::Hash, Tie::Scalar, Tie::Array, warnings::register,
	Fcntl, subs, Symbol, Term::ANSIColor
-- syntax fixes for hash vs. block, and ${var->{index}}
-- CORE:: prefix (CORE::print, CORE::tr)
-- CORE::GLOBAL special namespace
-- CORE functions can be overridden
-- stacked operators in "-X" file test
-- remove "." from @INC

- Java:
-- "require"
-- "opendir", "readdir", "closedir", "select"
-- tied hash
-- tied array
-- overload implemented for about half of the operators
-- /xx regex modifier
-- strict refs
-- srand() returns true, warns on overflow
-- require VERSION
-- fix read-only values
-- $\
-- caller() now works "natively", decoding the Java stack trace
-- symbol tables like %:: and typeglobs support
-- '-e' file test
-- lvalue ternary "?:"
-- add core modules:
	Cwd

9.022 cpan:Perlito5  2017-05-xx
- Parser:
-- Implemented compile-time scratchpad, used in BEGIN blocks.
-- "Use" is no longer an AST node, because all "use" statements
	are executed at compile-time
- JavaScript:
-- fix "range" special cases
-- regex /s /x modifiers
-- variable redeclaration
-- fixed a performance problem in eval-string
- Java:
-- eval-string
-- __DATA__ and <DATA> filehandle
-- TIESCALAR, AUTOLOAD
-- "Encode.pm" encode_utf8, decode_utf8
-- "Scalar::Util", "List::Util" ports.
-- BEGIN block fixes - "Exporter" works.
-- INIT and END blocks
-- "$$" variable (process id)
-- mkdir(), rmdir()
-- pack (a..X, @ and . with number working)
-- unpack (a,A,Z with number working)
-- splice()
-- optimize "for (0..1000000)"
-- s///e, tr//
-- glob deref - *{ $name }{CODE}->()
-- regex comments with "(?#text)"
-- regex modifiers /e /g /c