@@ -21,7 +21,8 @@
 -- set Perl version to 5.026
 -- add core modules:
 	Tie::Hash, Tie::Scalar, Tie::Array, warnings::register,
-	Fcntl, subs, Symbol, Term::ANSIColor
+	Fcntl, subs, Symbol, Term::ANSIColor,
+	IO, IO::Handle, IO::Seekable
 -- syntax fixes for hash vs. block, and ${var->{index}}
 -- CORE:: prefix (CORE::print, CORE::tr)
 -- CORE::GLOBAL special namespace
